# minikin

./: .gitmodules  Android.bp  CMakeLists.txt  README.md
app/: HyphTool.cpp
doc/: minikin_style.md
include/minikin/: AndroidLineBreakerHelper.h  Characters.h  CmapCoverage.h  Font.h  FontCollection.h  FontFamily.h  FontStyle.h  GraphemeBreak.h  Hasher.h  HbUtils.h  Hyphenator.h  Layout.h  LayoutCache.h  LayoutCore.h  LayoutPieces.h  LineBreaker.h  Macros.h  MeasuredText.h  Measurement.h  MinikinFont.h  MinikinPaint.h  Range.h  SparseBitSet.h  SystemFonts.h  U16StringPiece.h
libs/minikin/: Android.bp  CmapCoverage.cpp  Emoji.cpp  FontCollection.cpp  FontFamily.cpp  FontLanguage.cpp  FontLanguage.h  FontLanguageListCache.cpp  FontLanguageListCache.h  FontUtils.cpp  FontUtils.h  GraphemeBreak.cpp  GreedyLineBreaker.cpp  HbFontCache.cpp  HbFontCache.h  Hyphenator.cpp  HyphenatorMap.cpp  HyphenatorMap.h  Layout.cpp  LayoutCache.h  LayoutCore.cpp  LayoutUtils.cpp  LayoutUtils.h  LineBreaker.cpp  LineBreakerImpl.cpp  LineBreakerImpl.h  LineBreakerUtil.h  Locale.cpp  Locale.h  LocaleListCache.cpp  LocaleListCache.h  MeasuredText.cpp  Measurement.cpp  MinikinFont.cpp  MinikinInternal.cpp  MinikinInternal.h  OptimalLineBreaker.cpp  SparseBitSet.cpp  StringPiece.cpp  StringPiece.h  (+3 more)
sample/: example.cpp  example_skia.cpp
tests/: Android.bp
tests/data/: itemize.xml
tests/perftests/: Android.bp  FontCollection.cpp  FontFamily.cpp  FontLanguage.cpp  GraphemeBreak.cpp  Hyphenator.cpp  WordBreaker.cpp  main.cpp
tests/stresstest/: Android.bp  FontFamilyTest.cpp  MultithreadTest.cpp
tests/unittest/: Android.bp  Android.mk  AndroidLineBreakerHelperTest.cpp  CmapCoverageTest.cpp  EmojiTest.cpp  FontCollectionItemizeTest.cpp  FontCollectionTest.cpp  FontFamilyTest.cpp  FontLanguageListCacheTest.cpp  GraphemeBreakTests.cpp  GreedyLineBreakerTest.cpp  HbFontCacheTest.cpp  HyphenatorMapTest.cpp  HyphenatorTest.cpp  ICUEnvironment.h  ICUTestBase.h  LayoutCacheTest.cpp  LayoutTest.cpp  (+10 more)
(+12 files in other folders)
